# bootcamp_cloud

Aula_10/: anotações.txt
aula_01/: anotações.txt  app.py
aula_02/: README.md  anotações.txt  main.py  main02.py  pyproject.toml
aula_03/: anotações.txt
aula_04/: anotações.txt
aula_05 e 06/: anotações.txt
aula_07/: anotações.txt
aula_08/: anotações.txt  fetch.py  fetch_2.py  fetch_3_modelo.py  pyproject.toml
aula_09/: anotações.txt
aula_11/: anotações.txt  exemplo.py
aula_12/: anotações.txt
aula_13/: anotações.txt  envio.py  pyproject.toml  recebimento.py
aula_14/: anotações.txt  dados.csv  exemplo.py
aula_15/: anotações.txt  index.html
aula_16 e 17/: anotações.txt  projeto_01.py  pyproject.toml
