[project]
name = "aula-02"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheusinhofs",email = "matheusfs117@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.5"
dependencies = [
    "boto3 (>=1.37.27,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
