[tool.poetry]
name = "aula-08"
version = "0.1.0"
description = ""
authors = ["Matheusinhofs <matheusfs117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
dotenv = "^0.9.9"
schedule = "^1.2.2"
pydantic = "^2.11.9"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
